# hw31

./: db.sqlite3  manage.py  pyproject.toml  pytest.ini.py  readme.md
ads/: admin.py  models.py  permissions.py  serializers.py  urls.py  validators.py  views.py
ads/fixtures/: ad.json  converter.py
ads/migrations/: 0001_initial.py  0002_ads.py  0002_alter_category_slug.py  0002_alter_user_age.py  0003_ad_delete_ads.py  0003_alter_user_email.py  0003_selection.py  0004_alter_user_birth_date.py  0004_location_alter_ad_options_alter_category_options_and_more.py  0004_selection_name.py  0005_alter_location_lat_alter_location_lng.py  0006_rename_location_user_locations.py
ads/serializers/: ad.py  category.py  location.py  selection.py  user.py
ads/views/: ads.py  category.py  location.py  selection.py  service.py  users.py
home_w27/: asgi.py  settings.py  urls.py  wsgi.py
tests/: conftest.py  factories.py  fixtures.py
tests/ads/: ad_create_test.py  ad_list_test.py  test_ads_one.py
tests/selections/: selection_create_test.py
